objects/RX_ExIm_Status__c.object
<CustomObject>
    <fields>
        <fullName>Finished__c</fullName>
        <label>Finished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID__c</fullName>
        <description>Values: Export, Export ALL, Import, Import ALL</description>
        <externalId>true</externalId>
        <label>ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Job_ID__c</fullName>
        <label>Job ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted__c</fullName>
        <label>Submitted</label>
        <type>DateTime</type>
    </fields>
    <label>REVVY Export Import Status</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ID__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted__c</columns>
        <columns>Finished__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>RX_ExIm_Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>REVVY Export Import Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>